--- a/components/menu.module.css
+++ b/components/menu.module.css
@@ -100,3 +100,38 @@
   color: #29486b;
 }
 
+.navMenu ul li a.visited {
+  color: blue; /* Farbe für besuchte Projekte */
+}
+
+.navMenu ul li a.unvisited {
+  color: lightblue; /* Farbe für unbesuchte Projekte */
+}
+
+.buttonToggleVisited {
+  margin: 10px;
+  padding: 5px;
+  background-color: #ccc;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.buttonToggleVisited:hover {
+  background-color: #bbb;
+}
+
+.buttonClearVisited {
+  margin: 10px;
+  padding: 5px;
+  background-color: #e74c3c;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.buttonClearVisited:hover {
+  background-color: #c0392b;
+}
+
