--- a/components/menu.module.css
+++ b/components/menu.module.css
@@ -40,7 +40,7 @@
   width: max-content;
   min-width: 15%;
   max-width: 100%;
-  max-height: 70vh;
+  max-height: 80vh;
   overflow-y: auto;
   word-wrap: break-word;
 }
@@ -82,14 +82,21 @@
   border-bottom: 1px solid #ddd;
 }
 
-.navMenu li:last-child {
-  border-bottom: none;
-}
-
 .navMenu a {
   text-decoration: none;
   color: black;
 }
+
+.navMenu ul li {
+  position: relative; 
+}
+
+.navMenu li a {
+  display: block; 
+  width: 100%; 
+  height: 100%; 
+}
+
 
 .hotSpot {
   cursor: pointer;
@@ -144,10 +151,6 @@
   text-decoration: none;
   color: #29486b;
   border-bottom: 1px solid #ddd; 
-}
-
-.staticLinks a:last-child {
-  border-bottom: none; 
 }
 
 .legals {
