--- a/components/menu.module.css
+++ b/components/menu.module.css
@@ -18,12 +18,7 @@
   transition: width 0.2s ease, height 0.2s ease;
 }
 
-.menu:hover {
-  width: 80px;
-  height: 80px;
-  background-color: rgba(255, 255, 255, 1);
-}
-
+.menu:hover,
 .menu.active {
   width: 80px;
   height: 80px;
@@ -71,6 +66,11 @@
 .projects {
 }
 
+.hotSpot {
+  cursor: pointer;
+  font-weight: bold;
+}
+
 .navMenu ul {
   list-style: none;
   padding: 0;
@@ -97,12 +97,6 @@
   height: 100%; 
 }
 
-
-.hotSpot {
-  cursor: pointer;
-  font-weight: bold;
-}
-
 .navMenu ul li a.visited {
   color: black; /* Farbe für besuchte Projekte */
 }
@@ -113,7 +107,7 @@
 
 .buttonContainer {
   display: flex;
-  flex-direction: row; /* Buttons nebeneinander anordnen */
+  flex-direction: row; 
   justify-content: center;
   align-items: center;
   margin: 10px;
