--- a/components/menu.module.css
+++ b/components/menu.module.css
@@ -1,141 +1,177 @@
 .header {
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    z-index: 1000;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 1000;
 }
 
 .menu {
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.9);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: width 0.2s ease, height 0.2s ease;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.9);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: width 0.2s ease, height 0.2s ease;
 }
 
-.menu:hover {
-  width: 80px; 
-  height: 80px;
-  background-color: rgba(255, 255, 255, 1);
-}
-
+.menu:hover,
 .menu.active {
-  width: 80px; 
+  width: 80px;
   height: 80px;
   background-color: rgba(255, 255, 255, 1);
 }
 
 .navMenu {
-    position: fixed;
-    top: 100px;
-    right: 10px;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    min-width: max-content;
-    max-width: 100%;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
+  position: fixed;
+  top: 100px;
+  right: 10px;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: max-content;
+  min-width: 15%;
+  max-width: 100%;
+  max-height: 80vh;
+  overflow-y: auto;
+  word-wrap: break-word;
 }
 
-@media (max-width: 600px) {
-    .navMenu {
-        right: 5px;
-        left: 5px;
-        width: 90%;
-        margin: 0 auto;
-    }
+.viewsSection {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  font-weight: bold;
+  background-color: #f8f8f8;
+  border-bottom: 1px solid #ddd;
 }
 
-.navMenu ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+.viewsSection a {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
 }
 
-.navMenu li {
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
+.viewsSection a svg {
+  margin-right: 8px;
 }
 
-.navMenu li:last-child {
-    border-bottom: none;
+.viewsSection a:hover {
+  color: blue; /* toDo: Linkfarbe ändern */
 }
 
-.navMenu a {
-    text-decoration: none;
-    color: black;
-}
-
-.navMenu li:first-child a {
-    font-weight: bold;
+.projects {
 }
 
 .hotSpot {
   cursor: pointer;
+  font-weight: bold;
 }
 
-/* Styling für den separaten Abschnitt der statischen Links */
-.staticLinks {
-  margin-top: 10px;
-}
-
-.staticLinks ul {
+.navMenu ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.staticLinks li {
+.navMenu li {
   padding: 10px;
   border-bottom: 1px solid #ddd;
 }
 
-.staticLinks li:last-child {
-  border-bottom: none;
+.navMenu a {
+  text-decoration: none;
+  color: black;
 }
 
-.staticLinks a {
-  color: #29486b;
+.navMenu ul li {
+  position: relative; 
+}
+
+.navMenu li a {
+  display: block; 
+  width: 100%; 
+  height: 100%; 
 }
 
 .navMenu ul li a.visited {
-  color: blue; /* Farbe für besuchte Projekte */
+  color: black; /* Farbe für besuchte Projekte */
 }
 
 .navMenu ul li a.unvisited {
-  color: lightblue; /* Farbe für unbesuchte Projekte */
+  color: rgb(145, 151, 232); /* Farbe für unbesuchte Projekte */
 }
 
-.buttonToggleVisited {
+.buttonContainer {
+  display: flex;
+  flex-direction: row; 
+  justify-content: center;
+  align-items: center;
   margin: 10px;
-  padding: 5px;
+}
+
+.iconButton {
   background-color: #ccc;
   border: none;
+  border-radius: 50%;
+  padding: 10px;
   cursor: pointer;
-  border-radius: 5px;
+  margin: 8px;
+  transition: background-color 0.3s ease;
 }
 
-.buttonToggleVisited:hover {
+.iconButton:hover {
   background-color: #bbb;
 }
 
-.buttonClearVisited {
-  margin: 10px;
-  padding: 5px;
-  background-color: #e74c3c;
-  color: white;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
+.iconButton svg {
+  font-size: 0.8rem;
+  color: #333;
 }
 
-.buttonClearVisited:hover {
-  background-color: #c0392b;
+/* Styling für den Abschnitt der statischen Links */
+.staticLinks {
+  margin: 5px 0;
+  display: flex;
+  flex-direction: column; 
 }
 
+.staticLinks a {
+  font-weight: bold; 
+  padding: 10px; 
+  text-decoration: none;
+  color: #29486b;
+  border-bottom: 1px solid #ddd; 
+}
+
+.legals {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f8f8f8;
+  padding: 10px;
+}
+
+/* Trennstrich zwischen den Links */
+.separator {
+  width: 1px;
+  height: 20px;
+  background-color: #ddd;
+  margin: 0 10px;
+}
+
+@media (max-width: 600px) {
+  .navMenu {
+    right: 5px;
+    left: 5px;
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .navMenu li {
+    padding: 5px;
+  }
+}
