--- a/components/staticPages/staticPages.module.css
+++ b/components/staticPages/staticPages.module.css
@@ -1,39 +1,51 @@
 /* Container für das gesamte Layout und die Positionierung */
 .boxContainer {
   display: flex;
-  flex-direction: column; /* Inhalte untereinander anordnen */
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh; /* Der Container nimmt mindestens die Höhe des Viewports ein */
-  margin: 0; /* Kein zusätzlicher Margin */
-  padding: 20px; /* Optionaler Padding für den Container */
+  min-height: 100vh; 
+  margin: 0; 
+  padding: 20px; 
 }
 
 /* Container für die Textformatierung */
 .textContainer {
   display: flex;
-  flex-direction: column; /* Inhalte untereinander anordnen */
-  width: 80%; /* Breite des Containers */
-  max-width: 800px; /* Maximale Breite */
-  text-align: justify; /* Blocksatz für den Text */
-  background-color: rgba(169, 169, 169, 0.8);
+  flex-direction: column; 
+  width: 80%;
+  max-width: 1200px;
+  text-align: justify; 
+  background-color: rgba(255, 255, 255, 0.05); 
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   padding: 20px;
-  padding-bottom: 50px; /* Zusätzlicher Abstand zum unteren Rand */
-  margin: 20px auto; /* Zentriert den Container horizontal */
-  border-radius: 10px;
-}
-
-.title {
-  text-align: center; /* Überschrift zentrieren */
-}
-
-.bold {
-  font-weight: bold;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 20px auto;
+  border-radius: var(--border-radius-container)
 }
 
 .navigation {
   margin-bottom: 20px;
+}
+
+.icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20vh; 
+  height: 20vh; 
+  background-color: rgba(255, 255, 255, 0.8); 
+  border-radius: 50%;
+  margin: 2rem auto 1rem;
+}
+
+
+/* Responsive Design */
+@media (max-width: 600px) {
+  .textContainer {
+    width: 95vw; 
+  }
+
+  .title {
+    font-size: 1.5em;
+  }
 }
