--- a/components/staticPages/staticPages.module.css
+++ b/components/staticPages/staticPages.module.css
@@ -26,12 +26,12 @@
 .navigation {
   margin-bottom: 20px;
 }
+
 .iconWrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+  display: grid; /* Verwende Grid für das Layout */
+  grid-template-columns: repeat(3, 1fr); /* Drei gleich große Spalten */
+  gap: 1rem; /* Abstand zwischen den Icon-Containern */
   margin-top: 2rem;
-  flex-wrap: wrap;
 }
 
 .iconContainer {
@@ -39,8 +39,6 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  flex: 1 1 30%;
-  min-width: 200px;
   margin: 1rem;
 }
 
@@ -70,6 +68,17 @@
 }
 
 /* Responsive Design */
+@media (max-width: 800px) {
+  .iconWrapper {
+    grid-template-columns: 1fr;
+  }
+
+  .iconContainer {
+    margin: 0.5rem 0;
+    width: 100%;
+  }
+}
+
 @media (max-width: 600px) {
   .textContainer {
     width: 95vw; 
@@ -77,15 +86,5 @@
 
   .title {
     font-size: 1.5em;
-  }
-
-  .iconWrapper {
-    flex-direction: column; 
-    align-items: center; 
-  }
-
-  .iconContainer {
-    margin: 0.5rem 0; 
-    width: 100%; 
   }
 }
